--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<title>Coral Sea</title>
+<title>Eric Q Su</title>
 <link rel="stylesheet" href="CSS/Styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <body bgcolor=white>
