Colour theme change

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,10 @@
 <body bgcolor=white>
 </head>
 
-
-
 <body>
 
 <div>
 
-
-
-<div class="parallax"></div>
 
   <div class="header">
 
@@ -35,138 +30,12 @@
 
     </div>
   </div>
-<center>
+
+  <center>
+  <h1 class="mainText"> Hi, I'm Eric
+  </h1>
+  </center>
 
 
-<center>
-
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <h1 class="mainText animated-photo show-on-scroll responsiveText italics">
-    "we shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills; we shall never surrender"<h1 class="big-text animated-photo show-on-scroll responsiveText italics">
-    <h1 class="mainText animated-photo show-on-scroll responsiveTex italics">
-      - Winston Churchill
-    </h1 class="big-text animated-photo show-on-scroll responsiveText italics">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p class="paraText animated-photo show-on-scroll responsiveText">
-      Prior to the attack, Japan had taken Singapore, which was regarded by many as a “safe haven” and on the 3th of May, 1942,  Japanese ships rolled into the Tulagi islands, preparing for a “surprise” attack on the Australians and Americans.    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <img src="Media/Images/Japanese Navy.gif" alt="Les plan" class="animated-photo show-on-scroll responsive">
-    <p class="sourceText animated-photo show-on-scroll responsiveText">
-      Wikipedia - Japanese Imperial Navy
-    </p>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-
-<p class="paraText animated-photo show-on-scroll responsiveText">
-  Prior to the attack, Japan had taken Singapore, which was regarded by many as a “safe haven” and on the 3th of May, 1942,  Japanese ships rolled into the Tulagi islands, preparing for a “surprise” attack on the Australians and Americans.
-</p>
-<p class="paraText animated-photo show-on-scroll responsiveText">
-  Days before the battle, computer scientists in Britain had fully decoded a Japanese transmission, which showed the Japanese were targeting port Moresby thus attempting to secure the area around it, the coral sea. It was eventually seen that the purpose of the attack was to secure the surrounding area, allowing the Japanese to freely conquer and use Port Moresby as a staging ground for an inevitable Australian invasion.
-</p>
-<br>
-<br>
-<br>
-<img src="Media/Images/plan.jpg" alt="Les plan" class="animated-photo show-on-scroll responsive">
-<p class="sourceText animated-photo show-on-scroll responsiveText">
-  Australia royal navy website - Japanese conquest plan
-</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p class="paraText animated-photo show-on-scroll responsiveText">
-  Because of Australia’s lack of navy, they are unable to fend off the Japanese themselves, thus they seeked help from the American navy and air force. This amount of contribution was enormous. Out of the countless ships and carriers on the allied side, only two were Australian. HMAS Hobart and HMAS Australia.
-</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div class="card">
-  <img class="grey" src="Media/Images/HMAS Australia.jpg" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>HMAS Australia</b></h4>
-  </div>
-</div>
-<div class="card">
-  <img class="grey" src="Media/Images/Crace.jpeg" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>John Crace (left)</b></h4>
-    <p>Vice admiral</p>
-    <p>Commanded the two Australian ships during the battle</p>
-  </div>
-</div>
-<div class="card">
-  <img class="grey" src="Media/Images/HMAS Hobart.jpg" alt="Avatar" style="width:100%">
-  <div class="container">
-    <h4><b>HMAS Australia</b></h4>
-  </div>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p class="paraText animated-photo show-on-scroll responsiveText">
-  Finally, on the 4th of May at 6:30 am (AWM), American dive bombers launched an offensive attack on the Japanese invasion fleet, docked in the Tulagi islands, signifying the start of the battle.
-</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h1 class="mainText animated-photo show-on-scroll responsiveText">
-The Battle's Importance
-</h1 class="mainText animated-photo show-on-scroll responsiveText">
-<br>
-<br>
-<br>
-<p class="paraText animated-photo show-on-scroll responsiveText">
-  The Battle of The Coral Sea showed the importance of staying strong as a nation, and pushing forward despite very little assistance. For many decades, Singapore was seen as a safe haven for Australians, being that it was heavily fortified and defended by British troops. However, that was not the case as it fell to the Japanese, exposing Australia’s vulnerability in the process.
-
-  The battle was also the closest war has ever gotten to mainland Australia, being only 200km off the shore of Queensland, and artillery fire being heard from even further away. Being the first battle Australian has fought in without Britain, it illustrated Australia’s heavy reliance on other countries (being that Britain was too busy fighting the Nazis and Italians in Europe)
-
-  Despite the battle’s importance, it is also one that is seldom mentioned, with the main focus being on Kokoda island hopping in the Pacific.
-</p>
-<br>
-<br>
-<br>
-
-
-
-</center>
-
-<center>
 <script src="JS/js.js"></script>
 </body>
