--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="CSS/Styles.css">
 <link rel="stylesheet" href="CSS/grid.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<body bgcolor=white>
-</head>
+<head bgcolor=white>
+
 
 
 
@@ -35,6 +35,7 @@
   </div>
   <center>
 
-
 <script src="JS/js.js"></script>
 </body>
+</head>
+
