Colour theme change

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="CSS/grid.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <head bgcolor=white>
-
+</head>
 
 
 
@@ -37,5 +37,5 @@
 
 <script src="JS/js.js"></script>
 </body>
-</head>
 
+  <title></title>
