--- a/portfolio.html
+++ b/portfolio.html
@@ -1,36 +1,32 @@
 <!doctype html>
+<html lang="en">
 <head>
-<html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta charset="UTF-8">
-<title>Eric Q Su</title>
-<link rel="stylesheet" href="CSS/Styles.css">
-<link rel="stylesheet" href="CSS/grid.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<body bgcolor=white>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Eric Q Su</title>
+  <link rel="stylesheet" href="CSS/Styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
 
 <div>
 
-
   <div class="header">
 
-    <a href="index.html" class="logo"><img src="Media/Images/icon.gif" width="65" height="65" title="Logo" alt="Logo"></a>
+    <div class="centre">
 
-      <div class="header-right">
+      <a href="index.html" class="button" ><span>Home</span></a>
 
-        <a href="index.html" class="button" ><span>Home</span></a>
+      <a href="portfolio.html" class="button active" ><span>Portfolio</span></a>
 
-        <a href="portfolio.html" class="button active" ><span>Portfolio</span></a>
-
-        <a href="about.html" class="button" ><span>About Me</span></a>
-
-
+      <a href="about.html" class="button" ><span>About Me</span></a>
     </div>
+
   </div>
 
+</div>
 
 <script src="JS/js.js"></script>
 </body>
+</html>
