--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="Images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Eric Q Su</title>
   <link rel="stylesheet" href="CSS/Styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
+
 
 <body>
 
