--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
     <div class="centre">
 
-      <a href="index.html" class="button" ><span>Homes</span></a>
+      <a href="index.html" class="button" ><span>Home</span></a>
 
       <a href="portfolio.html" class="button" ><span>Portfolio</span></a>
 
